Nice styles and fix overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -237,12 +237,13 @@ form {
   width: 100vw;
   background-color: #081229;
   display: flex;
-  overflow: hidden;
+  overflow-x: hidden;
+  display: relative;
 }
 
 .loginFormCont {
-  padding: 20px 10px;
-  width: 50%;
+  padding: 30px 10px;
+  width: 40%;
   margin: auto;
   background-color: white;
   border-radius: 5px;
@@ -271,8 +272,9 @@ form {
 }
 
 .floatingInputField {
+  box-sizing: border-box;
   width: 100%;
-  height: 2.2rem;
+  height: 3.2rem;
   font-size: large;
   padding: 2px 10px;
   position: relative;
@@ -291,12 +293,13 @@ form {
 }
 
 .inputErrorMessage {
-  color: red;
+  color: rgba(255, 0, 0, 0.616);
   align-self: start;
+  margin-top: 3px;
 }
 
 .floatingLabelForm {
-  width: 45%;
+  width: 70%;
   margin: auto;
 }
 
@@ -330,10 +333,56 @@ form {
 
 .hidden {
   transition: transform 1s;
-  transform: translate(150vw, -50%);
+  transform: translate(130vw, -50%);
 }
 
 .registerHidden {
   transition: transform 1s;
-  transform: translate(-150vw, -50%);
+  transform: translate(-130vw, -50%);
+}
+
+.loginButton {
+  width: 100%;
+  margin: 20px 0;
+  height: 3.2rem;
+  font-size: large;
+  font-weight: bold;
+  background-color: #081229;
+  border-radius: 500px;
+  border: none;
+  padding: 0;
+  outline: none;
+  color: white;
+  transition: all 0.5s;
+}
+
+.loginButton:hover {
+  transition: all 0.8s;
+  background-color: #263566;
+  cursor: pointer;
+}
+
+.divider {
+  width: 90%;
+  margin: 10px auto;
+  border-top: 1px solid lightgray;
+}
+
+.noAccount {
+  font-size: 1.2rem;
+  margin: 25px 0;
+}
+
+.hideButton {
+  width: 70%;
+  border: 1px solid #081229;
+  background-color: white;
+  color: #081229;
+  margin-top: 0;
+}
+
+.hideButton:hover {
+  transition: all 0.8s;
+  background-color: #263566;
+  color: white;
 }
